@@ -1,3 +1,12 @@
+2008-02-26  Sebastian Marsching  <sebastian.marsching@1und1.de>
+
+	* src/de/schlund/pfixcore/workflow/context/RequestContextImpl.java: 
+	* src/de/schlund/pfixcore/workflow/ContextImpl.java: 
+	
+	Removed storage of last page / last flow information in session. Last flow 
+	is passed using a request parameter and page should always be present in the
+	request path.
+
 2008-02-24  schst  <schst@stubbles.net>
 
 	* src/de/schlund/pfixcore/util/TransformerCallback.java: added new method
